--- a/src/assets/sass/style.css
+++ b/src/assets/sass/style.css
@@ -17,7 +17,8 @@
 }
 :root {
     --color-black : #000;
-    --color-gray : #121212;
+    --color-gray : #1f1f1f;
+    --color-gray1:#333333;
     --color-green: #17cf5b;
 }
 *{
@@ -28,6 +29,9 @@
 }
 .bg-module {
     background-color: var(--color-gray);
+}
+.bg-module-1 {
+  background-color: var(--color-gray1);
 }
 .bg-green {
   background-color: var(--color-green);
