--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,8 @@
+*{
+  font-family: "Gotham","Medium" sans-serif;
+}
+
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -22,9 +27,38 @@
     --color-gray1:#333333;
     --color-green: #17cf5b;
 }
-*{
-    font-family: "Gotham","Medium" sans-serif;
- }
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
 .bg-black {
     background-color: var(--color-black);
 }
