--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -142,3 +142,70 @@
   -webkit-line-clamp: 2; /* Số dòng tối đa bạn muốn hiển thị */
   -webkit-box-orient: vertical;
 }
+
+/* Input */
+.custom-form {
+  width: 100%;
+  position: relative;
+  height: 50px;
+  overflow: hidden;
+}
+
+.custom-form input {
+  width: 100%;
+  height: 100%;
+  color: #000000;
+  padding-top: 20px;
+
+  padding-left: 10px;
+  font-size: 14px;
+  border: none;
+  background-color: #ffffff;
+}
+.custom-form label {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  border-bottom: 1px solid white;
+}
+.custom-form label::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border-bottom: 2px solid #000000;
+  transform: translateX(-100%);
+  transition: all 0.3s ease;
+}
+
+.content-name {
+  position: absolute;
+  bottom: 0px;
+  left: 5px;
+  font-size: 13px;
+  font-weight: 600;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 5px;
+  
+  transition: all 0.3s ease;
+}
+.custom-form input:focus {
+  outline: none;
+}
+.custom-form input:focus + .label-name .content-name,
+.custom-form input:valid + .label-name .content-name {
+  transform: translateY(-60%);
+  font-size: 11px;
+  left: 0px;
+  color: #000000;
+}
+.custom-form input:focus + .label-name::after,
+.custom-form input:valid + .label-name::after {
+  transform: translateX(0%);
+}
