--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -151,6 +151,7 @@
   color: #000000;
   padding-top: 20px;
   padding-left: 10px;
+  border-radius: 2px;
   font-size: 14px;
   border: none;
   background-color: #ffffff;
