--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -203,3 +203,15 @@
 .custom-form input:valid + .label-name::after {
   transform: translateX(0%);
 }
+.custom-img-animation {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  transform: scale(100%);
+  transition: 0.2s ease-in;
+  z-index: 998;
+}
+
+.custom-img-animation:hover {
+  transform: scale(102%);
+}
