--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -19,9 +19,8 @@
 }
 :root {
     --color-black : #000;
-    /* --color-gray : #1f1f1f; */
     --color-gray : #121212;
-    --color-gray1:z#333333;
+    --color-gray1:#333333;
     --color-green: #17cf5b;
 }
 .slider {
