--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23,10 +23,11 @@
     --color-gray1:#333333;
     --color-green: #17cf5b;
     --color-yellow: #ffe033;
+    --color-pink : #f30f53;
 }
 /* slider */
 .slider {
-  -webkit-appearance:sliderthumb-horizontal;
+  -webkit-appearance:initial;
   width: 100%;
   height: 4px;
   background: #d3d3d3;
@@ -40,7 +41,7 @@
   opacity: 1;
 }
 .slider::-webkit-slider-thumb {
-  -webkit-appearance:media-sliderthumb;
+  -webkit-appearance:initial;
   /* appearance:none; */
   width: 12px;
   height: 12px;
@@ -222,6 +223,14 @@
 
 .custom-img-animation:hover {
   transform: scale(102%);
+}
+.custom-img-thumb {
+  height: 300px;
+  width: 100%;
+  object-fit: contain;
+}
+.custom-objectfit-cover {
+  object-fit: cover;
 }
 /* Custom dropdown */
 .custom-dropdown {
